Make improvements to the way sidebar dimensions are fixed (setting of height, hiding of scrollbar)

--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -30,7 +30,7 @@ a {
 
 /** --SIDEBAR GROUPS */
 .sidebar-groups {
-	overflow-y: auto;
+	overflow-y: scroll;
 	overflow-x: hidden;
 }
 
@@ -77,18 +77,18 @@ a {
 }
 
 /** -- CONTENT GROUPS */
-.content-group {
+.group {
 }
 
 /** -- CONTENT ITEMS */
-.content-item {
+.item {
 	box-shadow: 0 0 5px #ddd;
 	border-radius: 5px;
 	margin-bottom: 20px;
 	overflow: hidden;
 	max-height: 200px;
 }
-.content-item-header {
+.item-header {
 	border-radius: 5px 5px 0 0;
 	background: #fff;
 	margin: 0;
@@ -97,21 +97,21 @@ a {
 }
 
 /** -- GROUP ITEMS */
-.item-jobs {
+.jobs {
 	height: 150px;
 }
-.item-job {
+.job {
 	overflow: hidden;
 }
-.item-job.animated {
+.job.animated {
 	background-repeat: repeat!important;
 }
-.item-job-header {
+.job-header {
 	margin: 20px;
 }
 
 /* ANIMATED ITEM JOBS */
-.item-job.animated {
+.job.animated {
   -webkit-animation: progress-bar-stripes 2s linear infinite;
      -moz-animation: progress-bar-stripes 2s linear infinite;
       -ms-animation: progress-bar-stripes 2s linear infinite;
@@ -129,7 +129,7 @@ a {
 	  -o-background-size: 40px 40px;
 	  background-size: 40px 40px;
 }
-.item-job.animated.bar-danger {
+.job.animated.bar-danger {
   background-color: #ee5f5b;
   background-image: -webkit-gradient(linear,0 100%,100% 0,color-stop(.25,rgba(255,255,255,0.15)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.15)),color-stop(.75,rgba(255,255,255,0.15)),color-stop(.75,transparent),to(transparent));
   background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
@@ -137,7 +137,7 @@ a {
   background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
   background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
 }
-.item-job.animated.bar-success {
+.job.animated.bar-success {
   background-color: #62c462;
   background-image: -webkit-gradient(linear,0 100%,100% 0,color-stop(.25,rgba(255,255,255,0.15)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.15)),color-stop(.75,rgba(255,255,255,0.15)),color-stop(.75,transparent),to(transparent));
   background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
@@ -145,7 +145,7 @@ a {
   background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
   background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
 }
-.item-job.animated.bar-info {
+.job.animated.bar-info {
   background-color: #5bc0de;
   background-image: -webkit-gradient(linear,0 100%,100% 0,color-stop(.25,rgba(255,255,255,0.15)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.15)),color-stop(.75,rgba(255,255,255,0.15)),color-stop(.75,transparent),to(transparent));
   background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
@@ -153,7 +153,7 @@ a {
   background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
   background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
 }
-.item-job.animated.bar-warning {
+.job.animated.bar-warning {
   background-color: #fbb450;
   background-image: -webkit-gradient(linear,0 100%,100% 0,color-stop(.25,rgba(255,255,255,0.15)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.15)),color-stop(.75,rgba(255,255,255,0.15)),color-stop(.75,transparent),to(transparent));
   background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
@@ -161,7 +161,7 @@ a {
   background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
   background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
 }
-.item-job.disabled {
+.job.disabled {
 	background: #f0f0f0!important;
 	color: #ccc;
 }
